# gpsoauth-deb

./: .hgignore  Makefile.am  README.md  bootstrap.sh  configure.ac
debian/: changelog  control  copyright
